force-app/main/default/objects/sugati__Vehicle_Allocation__c/sugati__Vehicle_Allocation__c.object-meta.xml
<CustomObject>
    <label>Vehicle Allocation</label>
    <nameField>
        <displayFormat>VA-{0000}</displayFormat>
        <label>Vehicle Allocation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>