force-app/main/default/objects/sugati__Vehicle_Allocation__c/fields/sugati__VA_Age__c.field-meta.xml
<CustomField>
    <fullName>sugati__VA_Age__c</fullName>
    <formula>sugati__VA_Client_Group__r.sugati__CG_Age__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>