force-app/main/default/objects/sugati__Vehicle_Allocation__c/fields/sugati__VA_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__VA_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Vehicle Allocations (Booking)</relationshipLabel>
    <relationshipName>Vehicle_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>