force-app/main/default/objects/sugati__Vehicle_Allocation__c/fields/sugati__VA_Booking_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__VA_Booking_Number__c</fullName>
    <formula>sugati__VA_Booking__r.sugati__O_Reference_Number__c</formula>
    <label>Booking Number</label>
    <type>Text</type>
</CustomField>