force-app/main/default/objects/sugati__Vehicle_Allocation__c/fields/sugati__VA_Client_Group__c.field-meta.xml
<CustomField>
    <fullName>sugati__VA_Client_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Group</label>
    <referenceTo>sugati__Client_Group__c</referenceTo>
    <relationshipLabel>Vehicle Allocations</relationshipLabel>
    <relationshipName>Vehicle_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>