force-app/main/default/objects/sugati__Vehicle_Allocation__c/fields/sugati__VA_Passenger_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__VA_Passenger_Name__c</fullName>
    <formula>sugati__VA_Client_Group__r.Name</formula>
    <label>Passenger Name</label>
    <type>Text</type>
</CustomField>