force-app/main/default/objects/sugati__Vehicle_Allocation__c/fields/sugati__VA_Reserved_Until__c.field-meta.xml
<CustomField>
    <fullName>sugati__VA_Reserved_Until__c</fullName>
    <label>Reserved Until</label>
    <type>DateTime</type>
</CustomField>