force-app/main/default/objects/sugati__Vehicle_Allocation__c/fields/sugati__VA_Seat_Max__c.field-meta.xml
<CustomField>
    <fullName>sugati__VA_Seat_Max__c</fullName>
    <formula>sugati__VA_Vehicle__r.sugati__V_Max_Seats__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seat Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>