force-app/main/default/objects/sugati__Vehicle_Allocation__c/fields/sugati__VA_Seat_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__VA_Seat_Number__c</fullName>
    <label>Seat Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>