force-app/main/default/objects/sugati__Vehicle_Allocation__c/fields/sugati__VA_Supplier_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__VA_Supplier_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Booking</label>
    <referenceTo>sugati__Supplier_Booking__c</referenceTo>
    <relationshipLabel>Vehicle Allocations</relationshipLabel>
    <relationshipName>Vehicle_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>