force-app/main/default/objects/sugati__Vehicle_Allocation__c/fields/sugati__VA_Supplier_ID__c.field-meta.xml
<CustomField>
    <fullName>sugati__VA_Supplier_ID__c</fullName>
    <formula>sugati__VA_Vehicle__r.sugati__V_Vehicle_Type__r.sugati__VT_Supplier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier ID</label>
    <type>Text</type>
</CustomField>