force-app/main/default/objects/sugati__Vehicle_Allocation__c/fields/sugati__VA_Tour__c.field-meta.xml
<CustomField>
    <fullName>sugati__VA_Tour__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tour</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Vehicle Allocations (Tour)</relationshipLabel>
    <relationshipName>Vehicle_Allocations1</relationshipName>
    <type>Lookup</type>
</CustomField>