force-app/main/default/objects/sugati__Vehicle_Allocation__c/fields/sugati__VA_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>sugati__VA_Vehicle__c</fullName>
    <label>Vehicle</label>
    <referenceTo>sugati__Vehicle__c</referenceTo>
    <relationshipLabel>Vehicle Allocations</relationshipLabel>
    <relationshipName>Vehicle_Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>