force-app/main/default/objects/sugati__Vehicle_Allocation__c/fields/sugati__VA_Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__VA_Vehicle_Type__c</fullName>
    <formula>sugati__VA_Vehicle__r.sugati__V_Vehicle_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Type</label>
    <type>Text</type>
</CustomField>