force-app/main/default/objects/sugati__Vehicle_Allocation__c/fields/sugati__VA_Vehicle_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__VA_Vehicle_Type_Name__c</fullName>
    <formula>sugati__VA_Vehicle__r.sugati__V_Vehicle_Type_Name__c</formula>
    <label>Vehicle Type Name</label>
    <type>Text</type>
</CustomField>